fix flex overflow in firefox

--- a/css/main.scss
+++ b/css/main.scss
@@ -214,8 +214,12 @@ body {
   .flex {
     display: flex;
   }
+  
+  .flex > * {
+    min-width: 1px; /* http://stackoverflow.com/questions/27424831/firefox-flexbox-overflow */
+  }
 
-  .x1 { flex: 1; }
+  .x1 { flex: 1; } 
   .x2 { flex: 2; }
   .x3 { flex: 3; }
   .x4 { flex: 4; }
